# Primeiro-notebook

./: .gitignore  MeuPrimeiroNotebook.ipynb  README.md  pyproject.toml
