[project]
name = "meu-primeiro-notebook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "jupyterlab-language-pack-pt-br>=4.5.post3",
    "jupyterthemes>=0.20.0",
    "matplotlib>=3.10.9",
]
